puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Profiles.Public/content/Views/User/Index.cshtml.pp
@{
    ViewBag.Title = "Index";
    Layout = "~/Views/Shared/_Layout.cshtml";
}


@section container{
    <h2>Index</h2>
}

